--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.AudioMessage.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.AudioMessage.fmx
@@ -39,6 +39,27 @@ object FrameAttachmentAudioMessage: TFrameAttachmentAudioMessage
       Size.PlatformDefault = False
       Stroke.Kind = None
       OnClick = CircleControlClick
+      object Layout1: TLayout
+        Align = Bottom
+        Margins.Right = -1.000000000000000000
+        Margins.Bottom = 1.000000000000000000
+        Position.Y = 14.000000000000000000
+        Size.Width = 25.000000000000000000
+        Size.Height = 9.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 0
+        object CircleListened: TCircle
+          Align = Right
+          Fill.Color = xFF71AAEB
+          HitTest = False
+          Position.X = 16.000000000000000000
+          Size.Width = 9.000000000000000000
+          Size.Height = 9.000000000000000000
+          Size.PlatformDefault = False
+          Stroke.Color = xFF222222
+          Stroke.Thickness = 2.000000000000000000
+        end
+      end
     end
     object PathControl: TPath
       Align = Center
