--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Messages.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Messages.fmx
@@ -1,9 +1,8 @@
-object FrameAttachmentMessages: TFrameAttachmentMessages
+inherited FrameAttachmentMessages: TFrameAttachmentMessages
   HitTest = False
   Margins.Top = 8.000000000000000000
   Size.Width = 354.000000000000000000
   Size.Height = 18.000000000000000000
-  Size.PlatformDefault = False
   object LabelTitle: TLabel
     Align = Left
     AutoSize = True
