--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Photo.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Photo.fmx
@@ -1,7 +1,6 @@
-object FrameAttachmentPhoto: TFrameAttachmentPhoto
+inherited FrameAttachmentPhoto: TFrameAttachmentPhoto
   Size.Width = 320.000000000000000000
   Size.Height = 240.000000000000000000
-  Size.PlatformDefault = False
   OnResize = FrameResize
   object Image: TImage
     MultiResBitmap = <
@@ -12,5 +11,6 @@ object FrameAttachmentPhoto: TFrameAttachmentPhoto
     Size.Height = 240.000000000000000000
     Size.PlatformDefault = False
     WrapMode = Stretch
+    OnClick = ImageClick
   end
 end
