--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Sticker.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Sticker.fmx
@@ -1,4 +1,4 @@
-object FrameAttachmentSticker: TFrameAttachmentSticker
+inherited FrameAttachmentSticker: TFrameAttachmentSticker
   HitTest = False
   Padding.Left = 7.000000000000000000
   Padding.Top = 9.000000000000000000
@@ -6,7 +6,6 @@ object FrameAttachmentSticker: TFrameAttachmentSticker
   Padding.Bottom = 10.000000000000000000
   Size.Width = 320.000000000000000000
   Size.Height = 147.000000000000000000
-  Size.PlatformDefault = False
   object ImageSticker: TImage
     MultiResBitmap.Height = 276
     MultiResBitmap.Width = 276
