--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Geo.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Geo.fmx
@@ -1,8 +1,7 @@
-object FrameAttachmentGeo: TFrameAttachmentGeo
+inherited FrameAttachmentGeo: TFrameAttachmentGeo
   Margins.Top = 8.000000000000000000
   Size.Width = 340.000000000000000000
   Size.Height = 127.000000000000000000
-  Size.PlatformDefault = False
   object RectangleMap: TRectangle
     Align = Left
     Fill.Color = x0AFFFFFF
